Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68278

Canvas.requestAnimationFrame's callback uses seconds instead of milliseconds

XMLWordPrintable

    • a36b5f85ff92c9f849d07080e1115dccfcd5c93c

      I've just ported some web-javascript code to QML and noticed that the callback's timestamp parameter of requestAnimationFrame is in seconds instead of milliseconds like on all major browsers.

      Receiving the same timestamp 60 times per second makes no sense at all.

      Since this is a behavior-change, the non-existing documentation mentioned in QTBUG-46554 also needs to be updated.

        For Gerrit Dashboard: QTBUG-68278
        # Subject Branch Project Status CR V

            broulik Kai Uwe Broulik
            gri Christoph Keller
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes