QQuickCanvas: Return millisecond timestamp in requestAnimationFrame callback

This matches common web browser behavior and allows using JS drawing libraries
that advance frames based on this timestamp to work as-is within a QtQuick scene.

[ChangeLog][QtQuick][Canvas][Important Behavior Changes] The requestAnimationFrame callback now gets passed a millisecond timestamp instead of seconds.

Task-number: QTBUG-68278
Change-Id: Ibaf6a5df2beeb52d3c921f8cd14d1c519288663b
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>